added info footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </tr>
       </table>
     </div>
-    <div class="footer">
+    <p><br /</p>
+    <footer class="footer">
       Project on <a href="https://github.com/msfwebdude/turing-complete" target="_blank">GitHub</a>&nbsp;|&nbsp;
       <a href="https://github.com/msfwebdude/turing-complete" target="_blank">
           <img alt="GitHub last commit" src="https://img.shields.io/github/last-commit/msfwebdude/turing-complete?color=silver&style=plastic">
@@ -64,10 +65,8 @@
       <a href="https://github.com/msfwebdude/turing-complete/blob/master/LICENSE" target="_blank">
           <img src="https://img.shields.io/github/license/msfwebdude/turing-complete?color=silver&style=plastic" alt="GitHub">
       </a>&nbsp;|&nbsp;
-      Updated:&nbsp;<span id="DateUpdated">{DateUpdated}</span>&nbsp;|&nbsp;
       &copy;&nbsp;<span id="currentYear"></span>&nbsp;Mike&nbsp;Firoved
-      
-  </div>
+    </footer>
   </div>
   <p><br /></p>
 </body>
