added output register and command

--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
       <table class="statusTable">
         <tr>
           <td style="width: 200px;">
-            <label for="state">State: </label>
+            <label for="state" class="statusLabels">State: </label>
             <output id="state">Stopped</output>
           </td>
           <td style="width: 200px;">
-            <label for="steps">Steps: </label>
+            <label for="steps" class="statusLabels">Steps: </label>
             <output id="steps">0</output>
           </td>
           <td style="width: 200px;">
-            <label for="point">Current Step: </label>
+            <label for="point" class="statusLabels">Current Step: </label>
             <output id="point">0</output>
           </td>
           <td style="width: 200px;">
-            <label for="alpha">Register A: </label>
+            <label for="alpha" class="statusLabels">Register A: </label>
             <output id="alpha">0</output>
+          </td>
+          <td style="width: 200px;">
+            <label for="yield" class="statusLabels">Output: </label>
+            <output id="yield">0</output>
           </td>
         </tr>
       </table>
